update gas in evm-internals

--- a/docs/evmInternals/gas.mdx
+++ b/docs/evmInternals/gas.mdx
@@ -1,8 +1,18 @@
-Gas
-Gas is a very important concept. It is a measure for the amount of computational work. That could be storing a value in storage, expanding the size of memory or executing an arithmetic operation.
+---
+sidebar_position: 1
+title: Gas
+tags:
+  - Evm
+  - basic
+  - evmbook
+---
 
-title
 
-We need gas because the resources for doing computational work are limited. So in order to avoid a DDOS attack for example a user needs to spend some gas to run his program.
 
-Gas has to be paid in ETH. If you run out of gas while executing your bytecode your execution stops.
+Gas是一个重要概念，它用于衡量执行计算任务所需的工作量，如存储数据、扩展内存大小或进行算术运算。
+
+
+![Docusaurus Plushie](https://media.marketrealist.com/brand-img/wU7UDcqaF/0x0/ethereum-gas-fee-1620759494562.png)
+
+
+之所以需要Gas，是因为计算资源有限，为了防止例如DDOS攻击，用户需要花费一定的Gas来运行他们的程序。Gas的支付是用以区块链代币（如ETH、CFX）完成的。如果在执行字节码过程中Gas用尽，那么执行将会停止。
